1. Добавили clientid в запросы на изменение активов asset на получение и на выдачу. 2. Добавили проверку уникальности инвентарного номера. Для того чтобы сразу при вводе проверить, а не после полного заполения карточки и ожидания. 3. сделали получения активов с пагинацией. Актуально для админов с большим списком.
